--- a/index.html
+++ b/index.html
@@ -59,46 +59,50 @@
       <!--Особенности-->
       <section>
         <h2 class="heading-visible">Особенности</h2>
-        <ul>
-          <li>
+        <ul class="specificities">
+          <li class="item">
             <h3 class="section-specificities-title">Внимание к деталям</h3>
-            <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+            <p class="section-specificities-text">
+              Идейные соображения, а также начало повседневной работы по формированию позиции.
+            </p>
           </li>
-          <li>
+          <li class="item">
             <h3 class="section-specificities-title">Пунктуальность</h3>
-            <p>
+            <p class="section-specificities-text">
               Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
             </p>
           </li>
-          <li>
+          <li class="item">
             <h3 class="section-specificities-title">Планирование</h3>
-            <p>
+            <p class="section-specificities-text">
               Равным образом консультация с широким активом в значительной степени обуславливает.
             </p>
           </li>
-          <li>
+          <li class="item">
             <h3 class="section-specificities-title">Современные технологии</h3>
-            <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+            <p class="section-specificities-text">
+              Значимость этих проблем настолько очевидна, что реализация плановых заданий.
+            </p>
           </li>
         </ul>
       </section>
       <!--Чем мы занимаемся-->
-      <section>
+      <section class="section">
         <h2 class="section-title">Чем мы занимаемся</h2>
         <ul>
           <li>
-            <img src="./images/img_1.jpg" alt="Разработка" width="370" height="294" />
+            <img src="./images/img_1.jpg" alt="Разработка" width="370" />
           </li>
           <li>
-            <img src="./images/img_2.jpg" alt="Адаптивная вёрстка" width="370" height="294" />
+            <img src="./images/img_2.jpg" alt="Адаптивная вёрстка" width="370" />
           </li>
           <li>
-            <img src="./images/img_3.jpg" alt="Оформление дизайнов" width="370" height="294" />
+            <img src="./images/img_3.jpg" alt="Оформление дизайнов" width="370" />
           </li>
         </ul>
       </section>
       <!--Наша команда-->
-      <section>
+      <section class="section">
         <h2 class="section-title">Наша команда</h2>
         <ul>
           <li>
