--- a/index.html
+++ b/index.html
@@ -19,135 +19,144 @@
   </head>
   <body>
     <!--Заголовок-->
-    <header class="container header">
+    <header>
       <!--Логотип и навигация-->
-      <nav class="nav-flex">
-        <a lang="en" href="" class="logo">Web<span class="header-logo-studio">Studio</span></a>
-        <ul class="header-nav-list">
+      <div class="container header">
+        <nav class="nav-flex">
+          <a lang="en" href="" class="logo">Web<span class="header-logo-studio">Studio</span></a>
+          <ul class="header-nav-list">
+            <li class="item">
+              <a href="./index.html" class="nav-link current">Студия</a>
+            </li>
+            <li class="item">
+              <a href="./portfolio.html" class="nav-link">Портфолио</a>
+            </li>
+            <li class="item">
+              <a href="#contacts" class="nav-link">Контакты</a>
+            </li>
+          </ul>
+        </nav>
+        <!--Контакты в шапке-->
+        <ul class="header-addr-list">
           <li class="item">
-            <a href="./index.html" class="nav-link current">Студия</a>
+            <a href="mailto:info@devstudio.com" class="address-link">info@devstudio.com</a>
           </li>
           <li class="item">
-            <a href="./portfolio.html" class="nav-link">Портфолио</a>
-          </li>
-          <li class="item">
-            <a href="#contacts" class="nav-link">Контакты</a>
+            <a href="tel:+380961111111" class="address-link">+38096111111</a>
           </li>
         </ul>
-      </nav>
-      <!--Контакты в шапке-->
-      <ul class="header-addr-list">
-        <li class="item">
-          <a href="mailto:info@devstudio.com" class="address-link">info@devstudio.com</a>
-        </li>
-        <li class="item">
-          <a href="tel:+380961111111" class="address-link">+38096111111</a>
-        </li>
-      </ul>
+      </div>
     </header>
 
     <!--Основоной контент-->
-    <main class="container">
+    <main>
       <!--Основной блок-->
-      <section class="section-business">
-        <h1 class="business-title">
-          Эффективные решения <br />
-          для вашего бизнеса
-        </h1>
-        <button type="button" class="button-service">Заказать услугу</button>
-      </section>
-      <!--Особенности-->
-      <section>
-        <h2 class="heading-visible">Особенности</h2>
-        <ul class="specificities">
-          <li class="item">
-            <h3 class="section-specificities-title">Внимание к деталям</h3>
-            <p class="section-specificities-text">
-              Идейные соображения, а также начало повседневной работы по формированию позиции.
-            </p>
-          </li>
-          <li class="item">
-            <h3 class="section-specificities-title">Пунктуальность</h3>
-            <p class="section-specificities-text">
-              Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
-            </p>
-          </li>
-          <li class="item">
-            <h3 class="section-specificities-title">Планирование</h3>
-            <p class="section-specificities-text">
-              Равным образом консультация с широким активом в значительной степени обуславливает.
-            </p>
-          </li>
-          <li class="item">
-            <h3 class="section-specificities-title">Современные технологии</h3>
-            <p class="section-specificities-text">
-              Значимость этих проблем настолько очевидна, что реализация плановых заданий.
-            </p>
-          </li>
-        </ul>
-      </section>
-      <!--Чем мы занимаемся-->
-      <section class="section">
-        <h2 class="section-title">Чем мы занимаемся</h2>
-        <ul>
-          <li>
-            <img src="./images/img_1.jpg" alt="Разработка" width="370" />
-          </li>
-          <li>
-            <img src="./images/img_2.jpg" alt="Адаптивная вёрстка" width="370" />
-          </li>
-          <li>
-            <img src="./images/img_3.jpg" alt="Оформление дизайнов" width="370" />
-          </li>
-        </ul>
-      </section>
-      <!--Наша команда-->
-      <section class="section">
-        <h2 class="section-title">Наша команда</h2>
-        <ul>
-          <li>
-            <img src="./images/photo_1.jpg" alt="Фото Игорь Демьяненко" width="270" height="260" />
-            <h3 class="team-title">Игорь Демьяненко</h3>
-            <p lang="en" class="team-text">Product Designer</p>
-          </li>
-          <li>
-            <img src="./images/photo_2.jpg" alt="Фото Ольга Репина" width="270" height="260" />
-            <h3 class="team-title">Ольга Репина</h3>
-            <p lang="en" class="team-text">Frontend Develoder</p>
-          </li>
-          <li>
-            <img src="./images/photo_3.jpg" alt="Фото Николай Тарасов" width="270" height="260" />
-            <h3 class="team-title">Николай Тарасов</h3>
-            <p lang="en" class="team-text">Marketing</p>
-          </li>
-          <li>
-            <img src="./images/photo_4.jpg" alt="Фото Михаил Ермаков" width="270" height="260" />
-            <h3 class="team-title">Михаил Ермаков</h3>
-            <p lang="en" class="team-text">UI Designer</p>
-          </li>
-        </ul>
-      </section>
+      <div class="container">
+        <section class="section-business">
+          <h1 class="business-title">
+            Эффективные решения <br />
+            для вашего бизнеса
+          </h1>
+          <button type="button" class="button-service">Заказать услугу</button>
+        </section>
+        <!--Особенности-->
+        <section>
+          <h2 class="heading-visible">Особенности</h2>
+          <ul class="specificities">
+            <li class="item">
+              <h3 class="section-specificities-title">Внимание к деталям</h3>
+              <p class="section-specificities-text">
+                Идейные соображения, а также начало повседневной работы по формированию позиции.
+              </p>
+            </li>
+            <li class="item">
+              <h3 class="section-specificities-title">Пунктуальность</h3>
+              <p class="section-specificities-text">
+                Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
+              </p>
+            </li>
+            <li class="item">
+              <h3 class="section-specificities-title">Планирование</h3>
+              <p class="section-specificities-text">
+                Равным образом консультация с широким активом в значительной степени обуславливает.
+              </p>
+            </li>
+            <li class="item">
+              <h3 class="section-specificities-title">Современные технологии</h3>
+              <p class="section-specificities-text">
+                Значимость этих проблем настолько очевидна, что реализация плановых заданий.
+              </p>
+            </li>
+          </ul>
+        </section>
+        <!--Чем мы занимаемся-->
+        <section class="section">
+          <h2 class="section-title">Чем мы занимаемся</h2>
+          <ul class="works">
+            <li class="item">
+              <img src="./images/img_1.jpg" alt="Разработка" />
+            </li>
+            <li class="item">
+              <img src="./images/img_2.jpg" alt="Адаптивная вёрстка" />
+            </li>
+            <li class="item">
+              <img src="./images/img_3.jpg" alt="Оформление дизайнов" />
+            </li>
+          </ul>
+        </section>
+        <!--Наша команда-->
+        <section class="section section-team">
+          <h2 class="section-title">Наша команда</h2>
+          <ul class="team">
+            <li class="team-card">
+              <img src="./images/photo_1.jpg" alt="Фото Игорь Демьяненко" />
+              <h3 class="team-title">Игорь Демьяненко</h3>
+              <p lang="en" class="team-text">Product Designer</p>
+            </li>
+
+            <li class="team-card">
+              <img src="./images/photo_2.jpg" alt="Фото Ольга Репина" />
+              <h3 class="team-title">Ольга Репина</h3>
+              <p lang="en" class="team-text">Frontend Develoder</p>
+            </li>
+
+            <li class="team-card">
+              <img src="./images/photo_3.jpg" alt="Фото Николай Тарасов" />
+              <h3 class="team-title">Николай Тарасов</h3>
+              <p lang="en" class="team-text">Marketing</p>
+            </li>
+
+            <li class="team-card">
+              <img src="./images/photo_4.jpg" alt="Фото Михаил Ермаков" />
+              <h3 class="team-title">Михаил Ермаков</h3>
+              <p lang="en" class="team-text">UI Designer</p>
+            </li>
+          </ul>
+        </section>
+      </div>
     </main>
     <!--Подвал-->
-    <footer class="container">
+    <footer>
       <!--Логотип-->
-      <a lang="en" href="" class="logo footer-logo"
-        >Web<span class="footer-logo-studio">Studio</span></a
-      >
-      <!--Адрес и контакты-->
-      <address id="contacts" class="footer-address">
-        <ul>
-          <li class="item">
-            <a href="" class="footer-address-text">г. Киев, пр-т Леси Украинки, 26</a>
-          </li>
-          <li class="item">
-            <a href="mailto:info@devstudio.com" class="footer-address-link">info@devstudio.com</a>
-          </li>
-          <li class="item">
-            <a href="tel:+380961111111" class="footer-address-link">+38096111111</a>
-          </li>
-        </ul>
-      </address>
+      <div class="container footer">
+        <a lang="en" href="" class="logo footer-logo"
+          >Web<span class="footer-logo-studio">Studio</span></a
+        >
+        <!--Адрес и контакты-->
+        <address id="contacts" class="footer-address">
+          <ul>
+            <li class="item">
+              <a href="" class="footer-address-text">г. Киев, пр-т Леси Украинки, 26</a>
+            </li>
+            <li class="item">
+              <a href="mailto:info@devstudio.com" class="footer-address-link">info@devstudio.com</a>
+            </li>
+            <li class="item">
+              <a href="tel:+380961111111" class="footer-address-link">+38096111111</a>
+            </li>
+          </ul>
+        </address>
+      </div>
     </footer>
   </body>
 </html>
