--- a/portfolio.html
+++ b/portfolio.html
@@ -19,31 +19,33 @@
   </head>
   <body>
     <!--Заголовок-->
-    <header class="container header">
+    <header>
       <!--Логотип и навигация-->
-      <nav class="nav-flex">
-        <a lang="en" href="" class="logo">Web<span class="header-logo-studio">Studio</span></a>
-        <ul class="header-nav-list">
+      <div class="container header">
+        <nav class="nav-flex">
+          <a lang="en" href="" class="logo">Web<span class="header-logo-studio">Studio</span></a>
+          <ul class="header-nav-list">
+            <li class="item">
+              <a href="./index.html" class="nav-link">Студия</a>
+            </li>
+            <li class="item">
+              <a href="./portfolio.html" class="nav-link current">Портфолио</a>
+            </li>
+            <li class="item">
+              <a href="#contacts" class="nav-link">Контакты</a>
+            </li>
+          </ul>
+        </nav>
+        <!--Контакты в шапке-->
+        <ul class="header-addr-list">
           <li class="item">
-            <a href="./index.html" class="nav-link">Студия</a>
+            <a href="mailto:info@devstudio.com" class="address-link">info@devstudio.com</a>
           </li>
           <li class="item">
-            <a href="./portfolio.html" class="nav-link current">Портфолио</a>
-          </li>
-          <li class="item">
-            <a href="#contacts" class="nav-link">Контакты</a>
+            <a href="tel:+380961111111" class="address-link">+38096111111</a>
           </li>
         </ul>
-      </nav>
-      <!--Контакты в шапке-->
-      <ul class="header-addr-list">
-        <li class="item">
-          <a href="mailto:info@devstudio.com" class="address-link">info@devstudio.com</a>
-        </li>
-        <li class="item">
-          <a href="tel:+380961111111" class="address-link">+38096111111</a>
-        </li>
-      </ul>
+      </div>
     </header>
     <!--Основоной контент-->
     <main class="container">
@@ -130,25 +132,27 @@
       </section>
     </main>
     <!--Подвал-->
-    <footer class="container">
+    <footer>
       <!--Логотип-->
-      <a lang="en" href="" class="logo footer-logo"
-        >Web<span class="footer-logo-studio">Studio</span></a
-      >
-      <!--Адрес и контакты-->
-      <address id="contacts" class="footer-address">
-        <ul>
-          <li class="item">
-            <a href="" class="footer-address-text">г. Киев, пр-т Леси Украинки, 26</a>
-          </li>
-          <li class="item">
-            <a href="mailto:info@devstudio.com" class="footer-address-link">info@devstudio.com</a>
-          </li>
-          <li class="item">
-            <a href="tel:+380961111111" class="footer-address-link">+38096111111</a>
-          </li>
-        </ul>
-      </address>
+      <div class="container footer">
+        <a lang="en" href="" class="logo footer-logo"
+          >Web<span class="footer-logo-studio">Studio</span></a
+        >
+        <!--Адрес и контакты-->
+        <address id="contacts" class="footer-address">
+          <ul>
+            <li class="item">
+              <a href="" class="footer-address-text">г. Киев, пр-т Леси Украинки, 26</a>
+            </li>
+            <li class="item">
+              <a href="mailto:info@devstudio.com" class="footer-address-link">info@devstudio.com</a>
+            </li>
+            <li class="item">
+              <a href="tel:+380961111111" class="footer-address-link">+38096111111</a>
+            </li>
+          </ul>
+        </address>
+      </div>
     </footer>
   </body>
 </html>
