--- a/portfolio.html
+++ b/portfolio.html
@@ -48,88 +48,92 @@
       </div>
     </header>
     <!--Основоной контент-->
-    <main class="container">
-      <h1 class="heading-visible">Портфолио</h1>
-      <section>
-        <!-- Фильтры -->
-        <h2 class="heading-visible">Фильтры</h2>
-        <ul>
-          <li>
-            <button type="button" class="portfolio-buttons">Все</button>
-          </li>
-          <li>
-            <button type="button" class="portfolio-buttons">Веб-сайты</button>
-          </li>
-          <li>
-            <button type="button" class="portfolio-buttons">Приложения</button>
-          </li>
-          <li>
-            <button type="button" class="portfolio-buttons">Дизайн</button>
-          </li>
-          <li>
-            <button type="button" class="portfolio-buttons">Маркетинг</button>
-          </li>
-        </ul>
-        <!-- Проекты -->
-        <h2 class="heading-visible">Проекты</h2>
-        <ul>
-          <li>
-            <img src="./images/img_pf_1.jpg" alt="Технокряк" width="370" height="294" />
-            <h3 class="portfolio-title">Технокряк</h3>
-            <p class="portfolio-text">Веб-сайт</p>
-          </li>
-          <li>
-            <img src="./images/img_pf_2.jpg" alt="Постер NO vs GS" width="370" height="294" />
-            <h3 class="portfolio-title">Постер <span lang="en">New Orlean vs Golden Star</span></h3>
-            <p class="portfolio-text">Дизайн</p>
-          </li>
-          <li>
-            <img src="./images/img_pf_3.jpg" alt="Ресторан Seafood" width="370" height="294" />
-            <h3 class="portfolio-title">Ресторан <span lang="en">Seafood</span></h3>
-            <p class="portfolio-text">Приложение</p>
-          </li>
-          <li>
-            <img src="./images/img_pf_4.jpg" alt="Проект Prime" width="370" height="294" />
-            <h3 class="portfolio-title">Проект <span lang="en">Prime</span></h3>
-            <p class="portfolio-text">Маркетинг</p>
-          </li>
-          <li>
-            <img src="./images/img_pf_5.jpg" alt="Проект Boxes" width="370" height="294" />
-            <h3 class="portfolio-title">Проект <span lang="en">Boxes</span></h3>
-            <p class="portfolio-text">Приложение</p>
-          </li>
-          <li>
-            <img
-              src="./images/img_pf_6.jpg"
-              alt="Inspiration has no Borders"
-              width="370"
-              height="294"
-            />
-            <h3 lang="en" class="portfolio-title">Inspiration has no Borders</h3>
-            <p class="portfolio-text">Веб-сайт</p>
-          </li>
-          <li>
-            <img
-              src="./images/img_pf_7.jpg"
-              alt="Издание Limited Edition"
-              width="370"
-              height="294"
-            />
-            <h3 class="portfolio-title">Издание <span lang="en">Limited Edition</span></h3>
-            <p class="portfolio-text">Дизайн</p>
-          </li>
-          <li>
-            <img src="./images/img_pf_8.jpg" alt="Проект LAB" width="370" height="294" />
-            <h3 class="portfolio-title">Проект <span lang="en">LAB</span></h3>
-            <p class="portfolio-text">Маркетинг</p>
-          </li>
-          <li>
-            <img src="./images/img_pf_9.jpg" alt="Growing Business" width="370" height="294" />
-            <h3 lang="en" class="portfolio-title">Growing Business</h3>
-            <p class="portfolio-text">Приложение</p>
-          </li>
-        </ul>
-      </section>
+    <main>
+      <div class="container">
+        <h1 class="heading-visible">Портфолио</h1>
+        <section class="section">
+          <!-- Фильтры -->
+          <h2 class="heading-visible">Фильтры</h2>
+          <ul class="filter">
+            <li class="filter-button">
+              <button type="button" class="portfolio-buttons">Все</button>
+            </li>
+            <li class="filter-button">
+              <button type="button" class="portfolio-buttons">Веб-сайты</button>
+            </li>
+            <li class="filter-button">
+              <button type="button" class="portfolio-buttons">Приложения</button>
+            </li>
+            <li class="filter-button">
+              <button type="button" class="portfolio-buttons">Дизайн</button>
+            </li>
+            <li class="filter-button">
+              <button type="button" class="portfolio-buttons">Маркетинг</button>
+            </li>
+          </ul>
+          <!-- Проекты -->
+          <h2 class="heading-visible">Проекты</h2>
+          <ul>
+            <li>
+              <img src="./images/img_pf_1.jpg" alt="Технокряк" width="370" height="294" />
+              <h3 class="portfolio-title">Технокряк</h3>
+              <p class="portfolio-text">Веб-сайт</p>
+            </li>
+            <li>
+              <img src="./images/img_pf_2.jpg" alt="Постер NO vs GS" width="370" height="294" />
+              <h3 class="portfolio-title">
+                Постер <span lang="en">New Orlean vs Golden Star</span>
+              </h3>
+              <p class="portfolio-text">Дизайн</p>
+            </li>
+            <li>
+              <img src="./images/img_pf_3.jpg" alt="Ресторан Seafood" width="370" height="294" />
+              <h3 class="portfolio-title">Ресторан <span lang="en">Seafood</span></h3>
+              <p class="portfolio-text">Приложение</p>
+            </li>
+            <li>
+              <img src="./images/img_pf_4.jpg" alt="Проект Prime" width="370" height="294" />
+              <h3 class="portfolio-title">Проект <span lang="en">Prime</span></h3>
+              <p class="portfolio-text">Маркетинг</p>
+            </li>
+            <li>
+              <img src="./images/img_pf_5.jpg" alt="Проект Boxes" width="370" height="294" />
+              <h3 class="portfolio-title">Проект <span lang="en">Boxes</span></h3>
+              <p class="portfolio-text">Приложение</p>
+            </li>
+            <li>
+              <img
+                src="./images/img_pf_6.jpg"
+                alt="Inspiration has no Borders"
+                width="370"
+                height="294"
+              />
+              <h3 lang="en" class="portfolio-title">Inspiration has no Borders</h3>
+              <p class="portfolio-text">Веб-сайт</p>
+            </li>
+            <li>
+              <img
+                src="./images/img_pf_7.jpg"
+                alt="Издание Limited Edition"
+                width="370"
+                height="294"
+              />
+              <h3 class="portfolio-title">Издание <span lang="en">Limited Edition</span></h3>
+              <p class="portfolio-text">Дизайн</p>
+            </li>
+            <li>
+              <img src="./images/img_pf_8.jpg" alt="Проект LAB" width="370" height="294" />
+              <h3 class="portfolio-title">Проект <span lang="en">LAB</span></h3>
+              <p class="portfolio-text">Маркетинг</p>
+            </li>
+            <li>
+              <img src="./images/img_pf_9.jpg" alt="Growing Business" width="370" height="294" />
+              <h3 lang="en" class="portfolio-title">Growing Business</h3>
+              <p class="portfolio-text">Приложение</p>
+            </li>
+          </ul>
+        </section>
+      </div>
     </main>
     <!--Подвал-->
     <footer>
