--- a/index.html
+++ b/index.html
@@ -19,155 +19,175 @@
   </head>
   <body>
     <!--Заголовок-->
-    <header class="container header">
+
+    <header class="header">
       <!--Логотип и навигация-->
-      <nav class="nav-flex">
-        <a lang="en" href="" class="logo">Web<span class="header-logo-studio">Studio</span></a>
-        <ul class="header-nav-list">
-          <li class="nav-item">
-            <a href="./index.html" class="nav-link current">Студия</a>
+
+      <div class="container header-flex">
+        <nav class="nav-flex">
+          <div class="header-logo">
+            <a lang="en" href="" class="logo">Web<span class="header-logo-studio">Studio</span></a>
+          </div>
+          <ul class="header-nav-list">
+            <li class="nav-item">
+              <a href="./index.html" class="nav-link current">Студия</a>
+            </li>
+            <li class="nav-item">
+              <a href="./portfolio.html" class="nav-link">Портфолио</a>
+            </li>
+            <li class="nav-item">
+              <a href="#contacts" class="nav-link">Контакты</a>
+            </li>
+          </ul>
+        </nav>
+
+        <!--Контакты в шапке-->
+
+        <ul class="header-addr-list">
+          <li class="addr-item">
+            <a href="mailto:info@devstudio.com" class="address-link">info@devstudio.com</a>
           </li>
-          <li class="nav-item">
-            <a href="./portfolio.html" class="nav-link">Портфолио</a>
-          </li>
-          <li class="nav-item">
-            <a href="#contacts" class="nav-link">Контакты</a>
+          <li class="addr-item">
+            <a href="tel:+380961111111" class="address-link">+38096111111</a>
           </li>
         </ul>
-      </nav>
-      <!--Контакты в шапке-->
-      <ul class="header-addr-list">
-        <li class="item">
-          <a href="mailto:info@devstudio.com" class="address-link">info@devstudio.com</a>
-        </li>
-        <li class="item">
-          <a href="tel:+380961111111" class="address-link">+38096111111</a>
-        </li>
-      </ul>
+      </div>
     </header>
 
     <!--Основоной контент-->
-    <main class="container">
+    <main>
       <!--Основной блок-->
       <section class="business">
-        <h1 class="business-title">
-          Эффективные решения <br />
-          для вашего бизнеса
-        </h1>
+        <h1 class="business-title">Эффективные решения для вашего бизнеса</h1>
         <button type="button" class="business-button">Заказать услугу</button>
       </section>
 
       <!--Особенности-->
       <section class="section specificities">
-        <h2 class="heading-visible">Особенности</h2>
-        <ul class="specificities-list">
-          <li class="specificities-card">
-            <div>
+        <div class="container">
+          <h2 class="heading-visible">Особенности</h2>
+          <ul class="specificities-list">
+            <li class="specificities-card">
               <h3 class="section-specificities-title">Внимание к деталям</h3>
               <p class="section-specificities-text">
                 Идейные соображения, а также начало повседневной работы по формированию позиции.
               </p>
-            </div>
-          </li>
-          <li class="specificities-card">
-            <div>
+            </li>
+
+            <li class="specificities-card">
               <h3 class="section-specificities-title">Пунктуальность</h3>
               <p class="section-specificities-text">
                 Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
               </p>
-            </div>
-          </li>
-          <li class="specificities-card">
-            <div>
+            </li>
+
+            <li class="specificities-card">
               <h3 class="section-specificities-title">Планирование</h3>
               <p class="section-specificities-text">
                 Равным образом консультация с широким активом в значительной степени обуславливает.
               </p>
-            </div>
-          </li>
-          <li class="specificities-card">
-            <div>
+            </li>
+
+            <li class="specificities-card">
               <h3 class="section-specificities-title">Современные технологии</h3>
               <p class="section-specificities-text">
                 Значимость этих проблем настолько очевидна, что реализация плановых заданий.
               </p>
-            </div>
-          </li>
-        </ul>
+            </li>
+          </ul>
+        </div>
       </section>
       <!--Чем мы занимаемся-->
       <section class="section">
-        <h2 class="section-title">Чем мы занимаемся</h2>
-        <ul class="works">
-          <li class="works-card">
-            <img src="./images/img_1.jpg" alt="Разработка" />
-          </li>
-          <li class="works-card">
-            <img src="./images/img_2.jpg" alt="Адаптивная вёрстка" />
-          </li>
-          <li class="works-card">
-            <img src="./images/img_3.jpg" alt="Оформление дизайнов" />
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="section-title">Чем мы занимаемся</h2>
+          <ul class="works">
+            <li class="works-card">
+              <img src="./images/img_1.jpg" alt="Разработка" />
+            </li>
+            <li class="works-card">
+              <img src="./images/img_2.jpg" alt="Адаптивная вёрстка" />
+            </li>
+            <li class="works-card">
+              <img src="./images/img_3.jpg" alt="Оформление дизайнов" />
+            </li>
+          </ul>
+        </div>
       </section>
       <!--Наша команда-->
       <section class="section section-team">
-        <h2 class="section-title">Наша команда</h2>
-        <ul class="team">
-          <li class="team-card">
-            <div><img src="./images/photo_1.jpg" alt="Фото Игорь Демьяненко" /></div>
-            <div>
-              <h3 class="team-title">Игорь Демьяненко</h3>
-              <p lang="en" class="team-text">Product Designer</p>
-            </div>
-          </li>
+        <div class="container">
+          <h2 class="section-title">Наша команда</h2>
+          <ul class="team">
+            <li class="team-card">
+              <div class="team-card-thumb">
+                <img src="./images/photo_1.jpg" alt="Фото Игорь Демьяненко" />
+              </div>
+              <div class="team-card-content">
+                <h3 class="team-title">Игорь Демьяненко</h3>
+                <p lang="en" class="team-text">Product Designer</p>
+              </div>
+            </li>
 
-          <li class="team-card">
-            <div><img src="./images/photo_2.jpg" alt="Фото Ольга Репина" /></div>
-            <div>
-              <h3 class="team-title">Ольга Репина</h3>
-              <p lang="en" class="team-text">Frontend Develoder</p>
-            </div>
-          </li>
+            <li class="team-card">
+              <div class="team-card-thumb">
+                <img src="./images/photo_2.jpg" alt="Фото Ольга Репина" />
+              </div>
+              <div class="team-card-content">
+                <h3 class="team-title">Ольга Репина</h3>
+                <p lang="en" class="team-text">Frontend Develoder</p>
+              </div>
+            </li>
 
-          <li class="team-card">
-            <div><img src="./images/photo_3.jpg" alt="Фото Николай Тарасов" /></div>
-            <div>
-              <h3 class="team-title">Николай Тарасов</h3>
-              <p lang="en" class="team-text">Marketing</p>
-            </div>
-          </li>
+            <li class="team-card">
+              <div class="team-card-thumb">
+                <img src="./images/photo_3.jpg" alt="Фото Николай Тарасов" />
+              </div>
+              <div class="team-card-content">
+                <h3 class="team-title">Николай Тарасов</h3>
+                <p lang="en" class="team-text">Marketing</p>
+              </div>
+            </li>
 
-          <li class="team-card">
-            <div><img src="./images/photo_4.jpg" alt="Фото Михаил Ермаков" /></div>
-            <div>
-              <h3 class="team-title">Михаил Ермаков</h3>
-              <p lang="en" class="team-text">UI Designer</p>
-            </div>
-          </li>
-        </ul>
+            <li class="team-card">
+              <div class="team-card-thumb">
+                <img src="./images/photo_4.jpg" alt="Фото Михаил Ермаков" />
+              </div>
+              <div class="team-card-content">
+                <h3 class="team-title">Михаил Ермаков</h3>
+                <p lang="en" class="team-text">UI Designer</p>
+              </div>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
     <!--Подвал-->
-    <footer class="container footer">
-      <!--Логотип-->
-      <a lang="en" href="" class="logo footer-logo"
-        >Web<span class="footer-logo-studio">Studio</span></a
-      >
-      <!--Адрес и контакты-->
-      <address id="contacts" class="footer-address">
-        <ul>
-          <li class="item">
-            <a href="" class="footer-address-text">г. Киев, пр-т Леси Украинки, 26</a>
-          </li>
-          <li class="item">
-            <a href="mailto:info@devstudio.com" class="footer-address-link">info@devstudio.com</a>
-          </li>
-          <li class="item">
-            <a href="tel:+380961111111" class="footer-address-link">+38096111111</a>
-          </li>
-        </ul>
-      </address>
+
+    <footer class="footer">
+      <div class="container">
+        <!--Логотип-->
+
+        <a lang="en" href="" class="logo footer-logo"
+          >Web<span class="footer-logo-studio">Studio</span></a
+        >
+
+        <!--Адрес и контакты-->
+
+        <address id="contacts" class="footer-address">
+          <ul>
+            <li class="footer-addr-item">
+              <a href="" class="footer-address-text">г. Киев, пр-т Леси Украинки, 26</a>
+            </li>
+            <li class="footer-addr-item">
+              <a href="mailto:info@devstudio.com" class="footer-address-link">info@devstudio.com</a>
+            </li>
+            <li class="footer-addr-item">
+              <a href="tel:+380961111111" class="footer-address-link">+38096111111</a>
+            </li>
+          </ul>
+        </address>
+      </div>
     </footer>
   </body>
 </html>
