--- a/portfolio.html
+++ b/portfolio.html
@@ -56,7 +56,7 @@
 
     <!--Основоной контент-->
 
-    <main class="container">
+    <main>
       <div class="container">
         <h1 class="heading-visible">Портфолио</h1>
         <section class="section">
